@@ -1,6 +1,12 @@
-2012-12-19  Niibe Yutaka  <gniibe@fsij.org>
+2012-12-25  Niibe Yutaka  <gniibe@fsij.org>
 
-	* test/factory_upgrade.py: New.
+	* tool/rsa.py: New.
+
+	* tool/rsa_example.key: New.  Example RSA key information.
+
+	* tool/upgrade_by_passwd.py: New.
+
+2012-12-19  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/Makefile.in (USE_OPT): -O3 and -Os (was: -O2).
 
